@@ -1,3 +1,10 @@
+2012-12-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* tests/rwfile.tap: Added -stdio tests for most file formats.
+	This tests I/O using an already-opened file handle passed via the
+	ImageInfo file member.  Formats using the Ghostscript delegate are
+	not working right yet.
+
 2012-12-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* tests/rwfile.c (main): Added a '-stdio' option to test
